--- a/hello.html
+++ b/hello.html
@@ -13,8 +13,16 @@
 	<body>
 
 		<!-- TITRE -->
-		<div>
+		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
+		</div>
+		
+		
+		<div>
+		    <p>
+		        *** exercie 1 ***
+		        Exercice et bilan de la section
+		    </p>
 		</div>
 		
 	
