ajout des titres

--- a/hello.html
+++ b/hello.html
@@ -18,12 +18,25 @@
 		</div>
 		
 		
+		<!--description-->
+		
 		<div>
+        <h1> Ma description </h1>
 		    <p>
 		        *** exercie 1 ***
-		        Exercice et bilan de la section
+		        Exercice et bilan de la section, Bonjour je m'appelle Arfaoui Khouloud  
+		        
 		    </p>
 		</div>
 		
+				<!--réconpense-->
+		
+		<div>
+        <h1> Mes réconpenses</h1>
+		    <p>
+		      en constructions  
+		        
+		    </p>
+		</div>
 	
 </body></html>
