--- a/hello.html
+++ b/hello.html
@@ -34,7 +34,7 @@
 		<div>
         <h1> Mes réconpenses</h1>
 		    <p>
-		      en constructions  
+		     <img src="images\medal_bronze.png">  
 		        
 		    </p>
 		</div>
